--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,1 @@
-REACT_APP_API_URL="http://localhost:5001"
+REACT_APP_API_URL="postgres://rxovzwya:EXQvWaagwlLrUMWXWHHuZefvTASzyW_N@peanut.db.elephantsql.com/rxovzwya"
